<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PersonalInformationActivity">

    <ImageView
        android:id="@+id/personal_back"
        android:layout_width="12dp"
        android:layout_height="24dp"
        android:background="@mipmap/common_icon_back_n"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="12dp"
        />

    <TextView
        android:id="@+id/personal_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/personal_edit"
        android:textColor="@color/title_color"
        android:layout_marginTop="30dp"
        android:layout_marginRight="12dp"
        android:layout_alignParentRight="true"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:background="@mipmap/personal_data_bg"
        />
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/personal_icon"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginRight="10dp"
        fresco:roundAsCircle="true"
        fresco:placeholderImage="@mipmap/icon"
        fresco:placeholderImageScaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="193dp"
        />
    <ImageView
        android:id="@+id/personal_publish"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@mipmap/community_btn_publish_n"
        android:layout_alignBottom="@id/personal_icon"
        android:layout_alignRight="@id/personal_icon"
        />
    <TextView
        android:id="@+id/personal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/personal_icon"
        android:layout_marginTop="206dp"
        android:layout_marginRight="6dp"
        android:textSize="20sp"
        android:text="@string/personal_name"
        android:textColor="@color/personal_name_color"
        />
    <TextView
        android:id="@+id/personal_integral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/personal_name"
        android:text="@string/personal_integral"
        android:layout_marginBottom="5dp"
        android:layout_alignBottom="@id/personal_name"
        android:textColor="@color/personal_integral_color"
        />
    <ImageView
        android:layout_width="24dp"
        android:layout_height="30dp"
        android:background="@mipmap/personal_vip"
        android:layout_toRightOf="@id/personal_icon"
        android:layout_alignBottom="@id/personal_icon"
        android:layout_marginLeft="32dp"
        />
    <TextView
        android:id="@+id/personal_autograph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/personal_icon"
        android:maxLength="20"
        android:ellipsize="end"
        android:layout_marginTop="16dp"
        android:textColor="@color/personal_autograph_color"
        android:text="@string/personal_autograph"
        />
    <TextView
        android:id="@+id/personal_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/personal_autograph"
        android:layout_marginTop="64dp"
        android:textSize="12sp"
        android:textColor="@color/title_unchecked_text_color"
        android:text="@string/personal_data"
        />
    <TextView
        android:id="@+id/personal_sex_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personal_data"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/personal_sex_birth"
        android:textSize="12sp"
        android:textColor="@color/title_unchecked_text_color"
        />
    <TextView
        android:id="@+id/personal_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personal_sex_birth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/personal_phone"
        android:textSize="12sp"
        android:textColor="@color/title_unchecked_text_color"
        />
    <TextView
        android:id="@+id/personal_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personal_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/personal_email"
        android:textSize="12sp"
        android:textColor="@color/title_unchecked_text_color" />
    <Button
        android:id="@+id/personal_send"
        android:layout_width="336dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_below="@+id/personal_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp"
        android:text="@string/personal_send"
        android:textSize="20sp"
        android:textColor="@color/title_color"
        android:background="@drawable/personal_but_send_bg"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personal_send"
        android:layout_margin="10dp"
        android:textColor="@color/personal_last_login_color"
        android:layout_centerHorizontal="true"
        android:text="@string/personal_last_login"
        />
</RelativeLayout>