<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GroupCreateActivity">

    <include layout="@layout/merge_back_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/create_title"
        android:textColor="@color/personal_name_color"
        android:textSize="20sp"
        />
    <View
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#cccccc"
        android:layout_marginTop="50dp"
        />
    <ImageView
        android:id="@+id/group_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/title_view"
        android:layout_marginTop="40dp"
        android:background="@mipmap/group_head_icon"
        />
    <EditText
        android:id="@+id/create_name"
        android:layout_width="184dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/group_create_name_bg"
        android:layout_marginTop="30dp"
        android:layout_below="@id/group_icon"
        android:hint="@string/create_name"
        android:textSize="14sp"
        android:textColor="@color/title_unchecked_text_color"
        android:gravity="center"
        />
    <RelativeLayout
        android:layout_width="336dp"
        android:layout_height="119dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/group_create_relative_bg"
        android:layout_below="@+id/create_name"
        >
        <EditText
            android:id="@+id/create_describe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/create_describe"
            android:background="@null"
            android:textSize="12sp"
            android:textColor="@color/personal_name_color"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="@string/create_text_describe"
            android:textSize="10sp"
            android:textColor="@color/personal_autograph_color"
            />
    </RelativeLayout>
    <Button
        android:layout_width="336dp"
        android:layout_height="40dp"
        android:text="@string/create"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:background="@drawable/personal_but_send_bg"
        android:textColor="@color/title_color"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        />
</RelativeLayout>