<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:background="@color/message_group_bg_color"
    tools:context=".activity.PersonalDataActivity">

    <include layout="@layout/merge_back_image"/>
    <TextView
        android:id="@+id/data_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_chat_set"
        android:layout_centerHorizontal="true"
        android:textColor="@color/personal_name_color"
        android:textSize="20sp"
        />
    <RelativeLayout
        android:id="@+id/data_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_below="@+id/data_title"
        android:layout_marginTop="30dp"
        android:background="@color/title_color"
        >
        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/data_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginRight="10dp"
            fresco:placeholderImage="@mipmap/icon"
            fresco:placeholderImageScaleType="fitCenter"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/data_icon"
            android:layout_alignTop="@id/data_icon"
            android:layout_alignBottom="@id/data_icon"
            android:gravity="center_vertical"
            android:textSize="10sp"
            android:textColor="@color/data_name_color"
            android:text="@string/data_name"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/data_nike"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/title_color"
        android:text="@string/data_nike"
        android:textColor="@color/title_unchecked_text_color"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:textSize="14sp"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/data_information"
        />
    <RelativeLayout
        android:id="@+id/data_group"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/data_nike"
        android:background="@color/title_color"
        android:layout_marginTop="1dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="分组"
            android:textSize="14sp"
            android:layout_centerVertical="true"
            android:textColor="@color/title_unchecked_text_color"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@mipmap/my_icon_next_n"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/data_chat_record"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/title_color"
        android:text="@string/group_chat_recored"
        android:textSize="14sp"
        android:layout_marginTop="1dp"
        android:paddingLeft="12dp"
        android:gravity="center_vertical"
        android:layout_below="@+id/data_group"
        android:textColor="@color/title_unchecked_text_color"
        />
    <TextView
        android:id="@+id/data_clear_record"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@color/title_color"
        android:text="@string/data_clear_record"
        android:textSize="14sp"
        android:layout_marginTop="1dp"
        android:paddingLeft="12dp"
        android:gravity="center_vertical"
        android:layout_below="@+id/data_chat_record"
        android:textColor="@color/title_unchecked_text_color"
        />
    <Button
        android:layout_width="336dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="@drawable/group_but_bg"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:textColor="@color/title_color"
        android:textSize="20sp"
        android:text="@string/data_delete_friend"
        />
</RelativeLayout>