<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GroupOwnerInformationActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@mipmap/group_data_bg" />

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="30dp"
        android:background="@mipmap/common_nav_btn_back_n" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/group_icon"
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="200dp"
        android:layout_marginRight="30dp"
        fresco:placeholderImage="@mipmap/icon"
        fresco:placeholderImageScaleType="fitCenter"
        fresco:roundedCornerRadius="10dp" />

    <RelativeLayout
        android:id="@+id/group_members_relative"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="273dp"
        android:background="@color/title_color"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/group_members"
            android:textColor="@color/title_unchecked_text_color"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/group_members_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/my_icon_next_n"
            android:textColor="@color/title_unchecked_text_color"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/group_members_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/group_members_next"
            android:text="@string/group_members_person"
            android:textColor="@color/title_unchecked_text_color"
            android:textSize="14sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/group_name"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@id/group_members_relative"
        android:layout_marginTop="4dp"
        android:background="@color/title_color"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/message_group_name"
        android:textColor="@color/title_unchecked_text_color"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/group_summary_relative"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/group_name"
        android:layout_marginTop="1dp"
        android:background="@color/title_color"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/group_summary"
            android:textColor="@color/title_unchecked_text_color"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/group_summary_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/my_icon_next_n"
            android:textColor="@color/title_unchecked_text_color"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_notification_relative"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/group_summary_relative"
        android:layout_marginTop="1dp"
        android:background="@color/title_color"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/group_notification"
            android:textColor="@color/title_unchecked_text_color"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/group_notification_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/my_icon_next_n"
            android:textColor="@color/title_unchecked_text_color"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_manage_relative"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@+id/group_notification_relative"
        android:layout_marginTop="1dp"
        android:background="@color/title_color"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/group_manage"
            android:textColor="@color/title_unchecked_text_color"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/group_manage_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@mipmap/my_icon_next_n"
            android:textColor="@color/title_unchecked_text_color"
            android:textSize="14sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/group_chat_record_relative"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_below="@id/group_manage_relative"
        android:layout_marginTop="1dp"
        android:background="@color/title_color"
        android:gravity="center_vertical"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/group_chat_recored"
        android:textColor="@color/title_unchecked_text_color"
        android:textSize="14sp" />

    <Button
        android:id="@+id/group_but_out"
        android:layout_width="336dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:background="@drawable/group_but_bg"
        android:text="@string/group_dissolution"
        android:textColor="@color/title_color"
        android:textSize="20sp" />
</RelativeLayout>